z-index fixed for sidebar

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -9,7 +9,7 @@
     text-align: center;
     color: orange;
     font-size: 36px;
-    z-index: 999;
+    z-index: 99;
     background-color: #1d1f21;
 
     @include mobile {
