--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -9,7 +9,7 @@
     color: orange;
     background-color: #1d1f21;
     position: relative;
-    z-index: 9999;
+    z-index: 99;
     @include mobile {
       font-size: 50px;
     }
