--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,3 @@
-/* dark mode looking scrollbar
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background: #555;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #121212;
-  border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #242424;
-} */
-/* 
-body {
-  background-color: #262626;
-  height: 500vh;
-} */
-
 ::-webkit-scrollbar {
   width: 20px;
 }
